--- a/package.json
+++ b/package.json
@@ -19,8 +19,13 @@
   },
   "homepage": "https://github.com/qjegs/diary#readme",
   "dependencies": {
+    "@types/body-parser": "^1.19.2",
+    "@types/cookie-session": "^2.0.44",
     "@types/express": "^4.17.13",
-    "express": "^4.17.3"
+    "body-parser": "^1.20.0",
+    "cookie-session": "^2.0.0",
+    "express": "^4.17.3",
+    "reflect-metadata": "^0.1.13"
   },
   "devDependencies": {
     "ts-node": "^10.7.0"
